--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,8 +1,12 @@
+<p class="amount">There are <%=@contacts.length%> contacts</p>
+<ul class="list_of_contacts"><%@contacts.each do |contact|%>
+<li class="contact_info">
+<%=contact.first_name%>
+<%=contact.last_name%>
+<%=contact.email%>
+<%=contact.note%>
+<br>
+<a class="box1"href="">Edit</a>|<a class="box2"href="">Delete</a></li>
 
-<%@contacts.each do |contact|%>
-<ul><li><%=contact.first_name%></li>
-<li><%=contact.last_name%></li>
-<li><%=contact.email%></li>
-<li><%=contact.note%></li>
-</ul>
 <% end %>
+</ul>
