edit contact done

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,9 +1,27 @@
-<h3>Add a new contact</h3>
 
+  <h3>Add a new contact</h3>
 <form action='/contacts' method='post'>
-  <input type='text' name='first_name'>
-  <input type='text' name='last_name'>
-  <input type='text' name='email'>
-  <input type='text' name='note'>
+
+
+  <label for="first_name">
+  <span>First name:</span>
+  <input id="first_name" type='text' name='first_name'>
+</label>
+
+  <label for="last_name">
+  <span>Last name:</span>
+  <input id="last_name" type='text' name='last_name'>
+</label>
+
+<label for="email">
+  <span>Email:</span>
+  <input id="email" type='text' name='email'>
+</label>
+
+  <label for="note">
+  <span>Note:</span>
+  <input id="note" type='text' name='note'>
+</label>
+
   <input type='submit' value='New Contact'>
 </form>
